--- a/ist541/lab4/page2.html
+++ b/ist541/lab4/page2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>lab4:Adding Media Elements</title>
+<title>lab4:Adding Media Elements Audio and Video</title>
 <link href="css/lab4.css" rel="stylesheet" type="text/css">
 </head>
 
