--- a/699/Capstone Project/indexh.html
+++ b/699/Capstone Project/indexh.html
@@ -9,14 +9,15 @@
 
 <body>
 	<h1> Capstone Project </h1>
-	<a href="indexh.html">  Module One </a>
+	<a href="index1.html">Home</a>
+	<a href="indexh.html"> Module One </a>
 	<a href="page2.html"> Module Two </a>
 	<a href="page3.html"> Module Three </a>
 
 	<br>
 	<br>
 	<h2> Survey Overview</h2>
-	<iframe width="900" height="600" src="tool-content/Module One/index.html" frameborder="0" allow="autoplay;"></iframe>
+	<iframe width="900" height="600" src="tool-content/Module one/index.html" frameborder="0" allow="autoplay;"></iframe>
 
 </body>
 </html>
