--- a/699/Capstone Project/page2.html
+++ b/699/Capstone Project/page2.html
@@ -9,7 +9,8 @@
 
 <body>
 	<h1> Capstone Project </h1>
-	<a href="indexh.html">  Module One </a>
+	<a href="index1.html">Home</a>
+	<a href="indexh.html"> Module One </a>
 	<a href="page2.html"> Module Two </a>
 	<a href="page3.html"> Module Three </a>
 
