--- a/699/Capstone Project/indexh.html
+++ b/699/Capstone Project/indexh.html
@@ -17,7 +17,7 @@
 	<br>
 	<br>
 	<h2> Survey Overview</h2>
-	<iframe width="900" height="600" src="tool-content/Module one/index.html" frameborder="0" allow="autoplay;"></iframe>
+	<iframe width="900" height="600" src="tool-content/Module One/index.html" frameborder="0" allow="autoplay;"></iframe>
 
 </body>
 </html>
