--- a/699/homepage.html
+++ b/699/homepage.html
@@ -33,10 +33,9 @@
 	</div>
 	  
 	<br>
-  <div id="step3">
-	  <details>
-    <summary class="stepTitle"> Learning Objective</summary>
-    <div class="stepContent">
+ 
+    <h3>Learning Objective:</h3>
+    
       <div class="stepDescription">
    
 <p>The LPAD Faculty will be able to:</p>
