--- a/699/page2.html
+++ b/699/page2.html
@@ -21,7 +21,7 @@
 	<br>
 	<h3>This model introduces the concept of conducting surveys and how to construct questionnaire items. </h3>
 	<br>
-	<iframe width="900" height="600" src= "tool-content/captivate module one/Module One/index.html" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
+	<iframe width="900" height="600" src= "tool-content/captivate module one/Module one/index.html" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
 	<br>
 	<h3>Instruction: Next go to Module Two </h3>
 </body>
