--- a/699/homepage.html
+++ b/699/homepage.html
@@ -44,7 +44,7 @@
 <li>Recognize the functionality of the tabs in eXplorance Blue platform for building questionnaires with 90% accuracy.</li> 
 <li>Recognize the functionality of all tabs in eXplorance Blue platform for generating a result report with 90% accuracy.</li>
 <li>Develop a questionnaire with 90% accuracy. </li>
-<li>Generate a quantitative or a qualitative report that has 100% of the data required in the scenario. </li> 
+<li>Generate a reault report with 90% accuracy. </li> 
 </ul>
    </div>
       
